fixed alignment

--- a/src/app/order-form/order-form.component.scss
+++ b/src/app/order-form/order-form.component.scss
@@ -80,4 +80,5 @@ mat-form-field {
   width: 290px;
   display: flex;
   justify-content: center;
+  align-items: center;
 }
